force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelope__c/fields/Apttus_DocuApi__BatchApexStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__BatchApexStatus__c</fullName>
    <description>This field to track Batch Apex currently running or not, it is only during first step of Envelope creation.</description>
    <inlineHelpText>This field to track Batch Apex currently running or not, it is only during first step of Envelope creation.</inlineHelpText>
    <label>Batch Apex Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DONE</fullName>
            </value>
            <value>
                <fullName>RUNNING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>