force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelope__c/fields/Apttus_DocuApi__DocumentIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocumentIds__c</fullName>
    <description>Document Ids selected for signatures</description>
    <inlineHelpText>Document Ids selected for signatures</inlineHelpText>
    <label>Document Ids</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>