force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelope__c/fields/Apttus_DocuApi__DocumentName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocumentName__c</fullName>
    <description>List of Document names stored as JSON String of List&lt;String&gt; object</description>
    <inlineHelpText>List of Document names stored as JSON</inlineHelpText>
    <label>Document Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>