force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelope__c/fields/Apttus_DocuApi__DocumentUploadStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocumentUploadStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Document Upload Status (System use only)</description>
    <inlineHelpText>Document Upload Status (System use only)</inlineHelpText>
    <label>Document Upload Status</label>
    <type>Checkbox</type>
</CustomField>