force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelope__c/fields/Apttus_DocuApi__DocumentUploadStatusMessage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__DocumentUploadStatusMessage__c</fullName>
    <description>DocuSign Envelope Document Upload Status by the Batch Apex (System Use only)</description>
    <inlineHelpText>DocuSign Envelope Document Upload Status by the Batch Apex (System Use only)</inlineHelpText>
    <label>Document Upload Status Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>