force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelope__c/fields/Apttus_DocuApi__EmailSubject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__EmailSubject__c</fullName>
    <description>The subject of the email that will be sent to all recipients. This can be a maximum of 100 characters.</description>
    <inlineHelpText>The subject of the email that will be sent to all recipients. This can be a maximum of 100 characters.</inlineHelpText>
    <label>Email Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>