force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelope__c/fields/Apttus_DocuApi__EnvelopeContent__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__EnvelopeContent__c</fullName>
    <description>Holds Envelope data at the time of creation</description>
    <label>Envelope Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>