force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelope__c/fields/Apttus_DocuApi__EnvelopeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__EnvelopeId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Envelope Id from DocuSign</description>
    <externalId>true</externalId>
    <inlineHelpText>Envelope Id from DocuSign</inlineHelpText>
    <label>Envelope Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>