force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelope__c/fields/Apttus_DocuApi__NumberOfDocuments__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__NumberOfDocuments__c</fullName>
    <description>Number Of Documents added to this Envelope where we could download after Signing</description>
    <inlineHelpText>Number Of Documents added to this Envelope where we could download after Signing</inlineHelpText>
    <label>Number Of Documents</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>