force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelope__c/fields/Apttus_DocuApi__ParentId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__ParentId__c</fullName>
    <description>Reference field for the DocuSign Envelope linked to.</description>
    <inlineHelpText>Reference field for the DocuSign Envelope linked to.</inlineHelpText>
    <label>Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>