force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelope__c/fields/Apttus_DocuApi__RecallReason__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__RecallReason__c</fullName>
    <description>Reason for voiding/recalling the envelope.</description>
    <inlineHelpText>Reason for voiding/recalling the envelope.</inlineHelpText>
    <label>Recall Reason</label>
    <type>TextArea</type>
</CustomField>