force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelope__c/fields/Apttus_DocuApi__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_DocuApi__Status__c</fullName>
    <description>Envelope status from DocuSign</description>
    <inlineHelpText>Envelope status from DocuSign</inlineHelpText>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>