force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelope__c/fields/Apttus_QPDSign__QuoteProposal__c.field-meta.xml
<CustomField>
    <fullName>Apttus_QPDSign__QuoteProposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look-up value link for envelope DocuSign object</description>
    <inlineHelpText>Look-up value link for envelope DocuSign object</inlineHelpText>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipName>DocuSignEnvelopes</relationshipName>
    <type>Lookup</type>
</CustomField>