force-app/main/default/objects/Apttus_DocuApi__DocuSignEnvelope__c/listViews/Apttus_DocuApi__All.listView-meta.xml
<ListView>
    <fullName>Apttus_DocuApi__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Apttus_DocuApi__EnvelopeId__c</columns>
    <columns>Apttus_DocuApi__NumberOfDocuments__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Apttus_DocuApi__ParentId__c</columns>
    <columns>Apttus_DocuApi__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>